Fix icons on Safari and Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 .inline-icon {
     display: inline;
     max-height: 1.3em;
-    max-width: fit-content;
+    width: auto;
+    height: auto;
     margin: 0 0.2em;
     background-color: #FCFCFC;
     padding: 0.1em;
